// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/empty-title.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/empty-title.md inline validation: incorrect 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 6,
        "context": undefined,
        "line": 2,
        "message": "<title> cannot be empty, must have text content",
        "offset": 12,
        "ruleId": "empty-title",
        "ruleUrl": "https://html-validate.org/rules/empty-title.html",
        "selector": "head > title",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<head>
    <title></title>
</head>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/empty-title.md inline validation: whitespace 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 6,
        "context": undefined,
        "line": 2,
        "message": "<title> cannot be empty, must have text content",
        "offset": 12,
        "ruleId": "empty-title",
        "ruleUrl": "https://html-validate.org/rules/empty-title.html",
        "selector": "head > title",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<head>
    <title> </title>
</head>",
    "warningCount": 0,
  },
]
`;
